force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <description>Used to store partners for the FBC Chrysler and FBC FI &amp; Co-Brand teams, along with agent banks associated with Card Product records</description>
    <label>Partner</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>