force-app/main/default/objects/Partner__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>