force-app/main/default/objects/Partner__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>