force-app/main/default/objects/Partner__c/fields/Business_Center__c.field-meta.xml
<CustomField>
    <fullName>Business_Center__c</fullName>
    <label>Business Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>