force-app/main/default/objects/Partner__c/fields/Business_Link_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Link_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Link Enrollment Date</label>
    <type>Date</type>
</CustomField>