force-app/main/default/objects/Partner__c/fields/Buy_Sell_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell_Dealer_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buy/Sell Dealer Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>