force-app/main/default/objects/Partner__c/fields/Current_Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Status Effective Date</label>
    <type>Date</type>
</CustomField>