force-app/main/default/objects/Partner__c/fields/First_Offense_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Offense_Deactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Offense Deactivation Date</label>
    <type>Date</type>
</CustomField>