force-app/main/default/objects/Partner__c/fields/FNBO_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>FNBO_Agreement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FNBO Agreement Date</label>
    <type>Date</type>
</CustomField>