force-app/main/default/objects/Partner__c/fields/Lines__c.field-meta.xml
<CustomField>
    <fullName>Lines__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lines</label>
    <length>7</length>
    <type>Text</type>
</CustomField>