force-app/main/default/objects/Partner__c/fields/Parent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Parent Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>