force-app/main/default/objects/Partner__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>