force-app/main/default/objects/Partner__c/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>