force-app/main/default/objects/Partner__c/fields/Parts_District__c.field-meta.xml
<CustomField>
    <fullName>Parts_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parts District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>