force-app/main/default/objects/Partner__c/fields/R1DA_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>R1DA_Agreement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>R1DA Agreement Date</label>
    <type>Date</type>
</CustomField>