force-app/main/default/objects/Partner__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>