force-app/main/default/objects/Partner__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>