force-app/main/default/objects/Partner__c/fields/Second_Offense_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Offense_Deactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Offense Deactivation Date</label>
    <type>Date</type>
</CustomField>