force-app/main/default/objects/Partner__c/fields/Service_District__c.field-meta.xml
<CustomField>
    <fullName>Service_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>