force-app/main/default/objects/Partner__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>