force-app/main/default/objects/Partner__c/fields/Third_Offense_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Offense_Deactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>3rd Offense Deactivation Date</label>
    <type>Date</type>
</CustomField>